--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb://arussill:gXLMWRpsYX3xjvw@ac-lyj1tcn-shard-00-00.slcmvia.mongodb.net:27017,ac-lyj1tcn-shard-00-01.slcmvia.mongodb.net:27017,ac-lyj1tcn-shard-00-02.slcmvia.mongodb.net:27017/test?replicaSet=atlas-grn0ga-shard-0&ssl=true&authSource=admin
+spring.data.mongodb.database=JWT
